--- a/GithubUser/app/src/main/res/values/strings.xml
+++ b/GithubUser/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="dummy_location">Sydney, Australia</string>
     <string name="works_at">Works at</string>
     <string name="dummy_company">JVMDeveloperID @KotlinID @IDDevOps</string>
+    <string name="app_logo">App Logo</string>
 
     <!-- Other string resources-->
 
