--- a/MyNavigation/app/src/main/res/values/strings.xml
+++ b/MyNavigation/app/src/main/res/values/strings.xml
@@ -11,6 +11,5 @@
     <string name="category_name">Category Name</string>
     <string name="category_description">Category Description</string>
     <string name="to_home">Ke fragment Home</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="stock">Stock : %1$s</string>
 </resources>
