--- a/MyActionBar/app/src/main/res/values/strings.xml
+++ b/MyActionBar/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="menu_2">Menu 2</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="search_hint">Masukkan kata</string>
 </resources>
