Added some data from submission 1

--- a/Submission/GithubUser/app/src/main/res/values-in/strings.xml
+++ b/Submission/GithubUser/app/src/main/res/values-in/strings.xml
@@ -5,4 +5,5 @@
     <string name="tab_following">Mengikuti</string>
     <string name="enter_username">Masukkan nama pengguna</string>
     <string name="change_lang_settings">Ubah Pengaturan Bahasa</string>
+    <string name="repositories">Repositori</string>
 </resources>
