--- a/Submission/GithubUser/app/src/main/res/values/strings.xml
+++ b/Submission/GithubUser/app/src/main/res/values/strings.xml
@@ -4,11 +4,13 @@
     <string name="app_logo">App Logo</string>
     <string name="tab_followers">Followers</string>
     <string name="tab_following">Following</string>
+    <string name="repositories">Repositories</string>
     <string name="enter_username">Enter username</string>
     <string name="change_lang_settings">Change Language Settings</string>
 
     <string name="dummy_location" translatable="false">Sydney, Australia</string>
     <string name="dummy_company" translatable="false">JVMDeveloperID @KotlinID @IDDevOps</string>
+    <string name="dummy_numbers" translatable="false">1234</string>
 
 </resources>
 
