Added favorite button in user detail

--- a/Submission/GithubUser/app/src/main/res/values-in/strings.xml
+++ b/Submission/GithubUser/app/src/main/res/values-in/strings.xml
@@ -6,4 +6,5 @@
     <string name="enter_username">Masukkan nama pengguna</string>
     <string name="change_lang_settings">Ubah Pengaturan Bahasa</string>
     <string name="repositories">Repositori</string>
+    <string name="favorite">Favorit</string>
 </resources>
