--- a/Submission/GithubUser/app/src/main/res/values/strings.xml
+++ b/Submission/GithubUser/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="dummy_location" translatable="false">Sydney, Australia</string>
     <string name="dummy_company" translatable="false">JVMDeveloperID @KotlinID @IDDevOps</string>
     <string name="dummy_numbers" translatable="false">1234</string>
+    <string name="favorite">Favorite</string>
 
 </resources>
 
