--- a/Submission/GithubUser/app/src/main/res/values/strings.xml
+++ b/Submission/GithubUser/app/src/main/res/values/strings.xml
@@ -12,6 +12,9 @@
     <string name="dummy_company" translatable="false">JVMDeveloperID @KotlinID @IDDevOps</string>
     <string name="dummy_numbers" translatable="false">1234</string>
     <string name="favorite">Favorite</string>
+    <string name="fav_users">Favorite Users</string>
+    <string name="add_success">%s added to Favorite Users</string>
+    <string name="delete_success">%s deleted from Favorite Users</string>
 
 </resources>
 
