--- a/Submission/GithubUser/app/src/main/res/values/strings.xml
+++ b/Submission/GithubUser/app/src/main/res/values/strings.xml
@@ -7,17 +7,18 @@
     <string name="repositories">Repositories</string>
     <string name="enter_username">Enter username</string>
     <string name="change_lang_settings">Change Language Settings</string>
-
     <string name="dummy_location" translatable="false">Sydney, Australia</string>
     <string name="dummy_company" translatable="false">JVMDeveloperID @KotlinID @IDDevOps</string>
     <string name="dummy_numbers" translatable="false">1234</string>
     <string name="favorite">Favorite</string>
     <string name="fav_users">Favorite Users</string>
+    <string name="no_data">There are currently no data</string>
     <string name="add_success">%s added to Favorite Users</string>
     <string name="delete_success">%s deleted from Favorite Users</string>
     <string name="daily_reminder">Daily Reminder</string>
-    <string name="key_reminder">daily_reminder</string>
-    <string name="key_language">language</string>
+    <string name="key_reminder" translatable="false">daily_reminder</string>
+    <string name="key_language" translatable="false">language</string>
+    <string name="settings">Settings</string>
 
 </resources>
 
