--- a/Submission/GithubUser/app/src/main/res/values-in/strings.xml
+++ b/Submission/GithubUser/app/src/main/res/values-in/strings.xml
@@ -11,6 +11,7 @@
     <string name="add_success">%s dimasukkan ke Pengguna Favorit</string>
     <string name="delete_success">%s dihapus dari Pengguna Favorit</string>
     <string name="no_data">Tidak ada data saat ini</string>
-    <string name="daily_reminder">Pengingat Harian</string>
+    <string name="daily_reminder">Pengingat Harian pada Pukul 09:00</string>
     <string name="settings">Pengaturan</string>
+    <string name="repeat_alarm_success">Alarm berulang diatur untuk pukul %s</string>
 </resources>
