--- a/Submission/GithubUser/app/src/main/res/values/strings.xml
+++ b/Submission/GithubUser/app/src/main/res/values/strings.xml
@@ -15,10 +15,11 @@
     <string name="no_data">There are currently no data</string>
     <string name="add_success">%s added to Favorite Users</string>
     <string name="delete_success">%s deleted from Favorite Users</string>
-    <string name="daily_reminder">Daily Reminder</string>
+    <string name="daily_reminder">Daily Reminder at 09:00</string>
     <string name="key_reminder" translatable="false">daily_reminder</string>
     <string name="key_language" translatable="false">language</string>
     <string name="settings">Settings</string>
+    <string name="repeat_alarm_success">Repeating alarm set up at %s</string>
 
 </resources>
 
